--- a/package.json
+++ b/package.json
@@ -33,12 +33,26 @@
     "build-storybook": "build-storybook"
   },
   "license": "AGPL-3.0-or-later",
-  "browserslist": [
-    "> 0.2%",
-    "last 2 versions",
-    "last 4 years",
-    "not dead"
-  ],
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "dependencies": {
     "@babel/core": "^7.20.12",
     "@babel/plugin-transform-react-inline-elements": "^7.18.6",
@@ -92,6 +106,9 @@
     "@types/webpack-assets-manifest": "^5.1.0",
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@types/webpack-deadcode-plugin": "^0.1.2",
+    "@web3auth/base": "6.1.1",
+    "@web3auth/modal": "6.1.1",
+    "@web3auth/openlogin-adapter": "6.1.1",
     "autoprefixer": "^10.4.2",
     "axios": "^1.2.2",
     "axios-mock-adapter": "^1.21.1",
@@ -185,6 +202,7 @@
     "typescript": "^5.1.3",
     "util": "^0.12.4",
     "uuid": "^9.0.0",
+    "web3": "^4.0.1",
     "webpack": "^5.72.1",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-bundle-analyzer": "^4.5.0",
@@ -214,11 +232,15 @@
     "@testing-library/user-event": "^14.4.3",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "assert": "^2.0.0",
     "babel-jest": "^29.4.1",
     "babel-plugin-transform-require-context": "^0.1.1",
+    "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
+    "crypto-browserify": "^3.12.0",
     "danger": "^11.0.7",
     "eslint": "^8.0.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsdoc": "^43.1.1",
@@ -228,21 +250,29 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tailwindcss": "^3.10.1",
     "fake-indexeddb": "^4.0.0",
+    "https-browserify": "^1.0.0",
     "husky": "^8.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
     "jest-junit": "^15.0.0",
     "lint-staged": ">=10",
+    "os-browserify": "^0.3.0",
     "raf": "^3.4.1",
+    "react-app-rewired": "^2.2.1",
     "react-intl-translations-manager": "^5.0.3",
     "react-refresh": "^0.14.0",
+    "source-map-loader": "^4.0.1",
     "storybook-react-intl": "^1.1.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "stylelint": "^14.0.0",
     "stylelint-config-standard-scss": "^6.1.0",
     "tailwindcss": "^3.3.1",
     "ts-jest": "^29.0.0",
+    "url": "^0.11.0",
     "webpack-dev-server": "^4.9.1",
-    "yargs": "^17.6.2"
+    "yargs": "^17.6.2",
+    "zlib-browserify": "^0.0.3"
   },
   "resolutions": {
     "@types/react": "^18.0.26",
